--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,5 +1,4 @@
 # Sharpmake GitHub Actions CI configuration
-
 name: build
 on:
   push:
@@ -249,8 +248,19 @@ jobs:
           codebase/temp/bin/mac_${{ matrix.configuration }}_fastbuild/exe
           xcodebuild -workspace codebase/temp/solutions/HelloXCode_mac.xcworkspace -configuration ${{ matrix.configuration }} -scheme exe_mac
           cd codebase/temp/bin/mac_${{ matrix.configuration }}
-          DYLD_LIBRARY_PATH=. ./exe
-
+          DYLD_LIBRARY_PATH=. ./exe   
+          
+      - name: HelloAndroid ${{ matrix.configuration }}
+        if: runner.os == 'Windows'
+        working-directory: 'samples/HelloAndroid'
+        env: 
+            REMOVE_ANDROID_BUILD_TOOLS_VERSION: 31.0.0
+        run: | #Installed Build Tools revision 31.0.0 is corrupted. Need to remove and install again using the SDK Manager.
+          & $env:SHARPMAKE_EXE "/sources('HelloAndroid.main.sharpmake.cs')"
+          & $env:ANDROID_HOME/tools/bin/sdkmanager --uninstall "build-tools;${{ env.REMOVE_ANDROID_BUILD_TOOLS_VERSION }}"
+          & $env:COMPILE_BATCH codebase\temp\solutions\HelloAndroid_android_vs2019.sln "${{ matrix.configuration }}_NoBlob" "arm64_v8a"
+          & $env:COMPILE_BATCH codebase\temp\solutions\HelloAndroid_android_vs2019.sln "${{ matrix.configuration }}_NoBlob" "x86_64"
+            
       - name: NetCore/DotNetCoreFrameworkHelloWorld ${{ matrix.configuration }}
         if: runner.os == 'Windows'
         working-directory: 'samples/NetCore/DotNetCoreFrameworkHelloWorld'
