Deprecate old DotNetFramework that are not supported by MS anymore: 4.0, 4.5, 4.5 clientprofile (which didn't work since 4.5 didn't have a client profile version...), and 4.5.1
Cf. https://en.wikipedia.org/wiki/.NET_Framework_version_history#Overview

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -171,7 +171,7 @@ jobs:
         working-directory: 'samples/CSharpWCF'
         run: |
           & $env:SHARPMAKE_EXE "/sources('CSharpWCF.sharpmake.cs')"
-          & $env:COMPILE_BATCH codebase\CSharpWCFSolution.vs2015.v4_5.sln "${{ matrix.configuration }}" "Any CPU"
+          & $env:COMPILE_BATCH codebase\CSharpWCFSolution.vs2015.v4_5_2.sln "${{ matrix.configuration }}" "Any CPU"
 
       - name: FastBuildSimpleExecutable ${{ matrix.configuration }}
         if: runner.os == 'Windows'
