--- a/Sharpmake.Application/Sharpmake.Application.csproj
+++ b/Sharpmake.Application/Sharpmake.Application.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Sharpmake.Application.sharpmake.cs" />
     <None Include="app.config" />
     <None Include="app.manifest" />
   </ItemGroup>
