--- a/Sharpmake.Generators/Sharpmake.Generators.csproj
+++ b/Sharpmake.Generators/Sharpmake.Generators.csproj
@@ -114,6 +114,9 @@
     <Compile Include="XmlFileGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Sharpmake.Generators.sharpmake.cs" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Sharpmake\Sharpmake.csproj">
       <Project>{15f793c7-9e88-64a9-591c-7244fcc6b771}</Project>
       <Name>Sharpmake</Name>
