Enable determinism when compiling sharpmake and its modules

--- a/Sharpmake.Application/Sharpmake.Application.csproj
+++ b/Sharpmake.Application/Sharpmake.Application.csproj
@@ -18,7 +18,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-    <Deterministic>false</Deterministic>
+    <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <PlatformTarget>AnyCPU</PlatformTarget>
