- Remove use of system assemblies and instead use the ones from Basic.Reference.Assemblies nuget packages - Mark EnumeratePathToDotNetFramework and GetAssemblyDllPath obsolete - Add support and compil fixes for compiling sharpmake with NET5 (disabled for now)   * Set InvariantGlobalization to true in the csproj since sharpmake does not need it   * Add OS specific guards when accessing the windows registry (and add ref to the registry nuget package)   * Add guards for netframework or netcore specific like MessageBox - Auto reference to common platforms

--- a/Sharpmake.Generators/Sharpmake.Generators.csproj
+++ b/Sharpmake.Generators/Sharpmake.Generators.csproj
@@ -15,6 +15,7 @@
   <PropertyGroup>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <Deterministic>true</Deterministic>
+    <InvariantGlobalization>true</InvariantGlobalization>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <PlatformTarget>AnyCPU</PlatformTarget>
