[C#] Add support for launchSettings.json and generate it by default instead of csproj.user in case the csproj use the new dotnet sdk format

--- a/Sharpmake.Generators/Sharpmake.Generators.csproj
+++ b/Sharpmake.Generators/Sharpmake.Generators.csproj
@@ -128,6 +128,7 @@
     <Compile Include="VisualStudio\Csproj.cs" />
     <Compile Include="VisualStudio\IPlatformVcxproj.cs" />
     <Compile Include="VisualStudio\IVcxprojGenerationContext.cs" />
+    <Compile Include="VisualStudio\LaunchSettingsJson.cs" />
     <Compile Include="VisualStudio\PackagesConfig.Template.cs" />
     <Compile Include="VisualStudio\PackagesConfig.cs" />
     <Compile Include="VisualStudio\ProjectJson.Template.cs" />
