[Cross Platform] Allow users to pass in platform id (i.e. linux-x64) when calling CompileSharpmake.bat to be able to publish for different platforms * Add AllowUnsafeBlocks and promot xml warnings to be global properties so they apply when building for configs not in the project file

--- a/Sharpmake.Application/Sharpmake.Application.csproj
+++ b/Sharpmake.Application/Sharpmake.Application.csproj
@@ -18,6 +18,8 @@
   </PropertyGroup>
   <PropertyGroup>
     <Deterministic>true</Deterministic>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <NoWarn>1570,1591</NoWarn>
     <InvariantGlobalization>true</InvariantGlobalization>
     <MSBuildProjectExtensionsPath>..\tmp\projects\Sharpmake.Application</MSBuildProjectExtensionsPath>
   </PropertyGroup>
